# agenda

./: README
calconv/: ChangeLog  Makefile.am  README  calconv.c  configure.in
npuzzle/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.in
npuzzle/src/: AboutWindow.fl  InstructionsWindow.fl  MainWindow.fl  Makefile.am  PuzzleBox.cc  PuzzleBox.hpp  PuzzleGame.cc  PuzzleGame.hpp  RightAlignedOutput.cc  RightAlignedOutput.hpp  SettingsWindow.fl  clock.xbm  main.cc  move.xbm
npuzzle/vrpbuild/: vbuild  vconfig  vinstall
reversi/: ChangeLog  Makefile.am  configure.in
reversi/src/: MainWindow.fl  MainWindowBase.hpp  Makefile.am  ReversiBox.hpp  ReversiGame.cc  ReversiGame.hpp  main.cc
vrfig/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.in
vrfig/src/: Action.cc  Action.hpp  ActionBuffer.cc  ActionBuffer.hpp  ArrowAware.hpp  ArrowPoint.cc  ArrowPoint.hpp  Controllable.hpp  DrawingTool.cc  DrawingTool.hpp  Editor.cc  Editor.hpp  Element.cc  Element.hpp  ElementFactory.cc  ElementFactory.hpp  Figure.cc  Figure.hpp  FigureView.cc  FigureView.hpp  MainView.cc  MainView.hpp  Makefile.am  Movable.hpp  MoveFigTool.cc  MoveFigTool.hpp  Point.cc  Point.hpp  PolyLine.cc  PolyLine.hpp  Selectable.cc  Selectable.hpp  Textual.hpp  Tool.hpp  ToolFactory.cc  ToolFactory.hpp  ToolsChoice.cc  ToolsChoice.hpp  flext.cc  flext.hpp  (+7 more)
vrfig/src/elements/: Ellipse.cc  Ellipse.hpp  Label.cc  Label.hpp  Makefile.am  PolyLine.cc  PolyLine.hpp  Rectangle.cc  Rectangle.hpp
vrfig/src/espws/: FileBrowser.cxx  FileBrowser.h  FileChooser.cxx  FileChooser.fl  FileChooser.h  FileChooser2.cxx  FileIcon.cxx  FileIcon.h  FileIcon2.cxx  FileInput.cxx  FileInput.h  Makefile.am  allfiles.xbm  new.xbm  up.xbm
vrfig/src/icons/: arrow_icon.xbm  delete_icon.xbm  directory_icon.xbm  edit_icon.xbm  ellipse_icon.xbm  filled_icon.xbm  move_icon.xbm  movefig_icon.xbm  outline_icon.xbm  polyline_icon.xbm  rect_icon.xbm  text_icon.xbm  vfg_icon.xbm
vrfig/src/tools/: ArrowTool.cc  ArrowTool.hpp  DeleteTool.cc  DeleteTool.hpp  DrawingTool.cc  DrawingTool.hpp  EditTool.cc  EditTool.hpp  EllipseTool.cc  EllipseTool.hpp  LabelTool.cc  LabelTool.hpp  Makefile.am  MoveFigTool.cc  MoveFigTool.hpp  MoveTool.cc  MoveTool.hpp  PolyLineTool.cc  PolyLineTool.hpp  RectangleTool.cc  RectangleTool.hpp
www/: index.en.html  index.html  npuzzle-0.2.1  npuzzle-0.2.1.vrp  plain_style.css  style.css
www/vrfig/: index.en.html  index.html  style.css
