dnl Process this file with autoconf to produce a configure script.
dnl
dnl $Id: configure.in,v 1.1.1.1 2001-03-19 21:13:58 jle Exp $

dnl -----------------------
dnl Autoconf initialization
dnl -----------------------
AC_INIT(calconv.c)
AC_PREFIX_DEFAULT(/usr/local)
AC_LANG_C

dnl -----------------------
dnl Automake initialization
dnl -----------------------
AM_INIT_AUTOMAKE(calconv, 0.1)

dnl ------------
dnl C++ settings
dnl ------------
AC_PROG_CC

dnl --------------------------
dnl Check for Berkeley DB 1.85
dnl --------------------------
__db1_available=no
AC_CHECK_LIB(db1, main, [LIBS="-ldb1 $LIBS"; __db1_available=yes], AC_MSG_RESULT([no (trying -ldb)]), $LDFLAGS $LIBS)
if test "$__db1_available" != yes ; then
  AC_CHECK_LIB(db, main, LIBS="-ldb $LIBS", AC_MSG_ERROR([Could not link with db libraries.]), $LDFLAGS $LIBS)
fi
AC_CHECK_HEADER(db1/db.h, , AC_MSG_ERROR([Could not find db include files.]))

dnl ------------------
dnl Write output files
dnl ------------------
AC_OUTPUT(Makefile)
