## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.4 2001-05-23 07:54:04 jle Exp $

srcdir = @srcdir@
VPATH = @srcdir@

INCLUDES = -I..

noinst_LIBRARIES = libelements.a

libelements_a_SOURCES = PolyLine.hpp PolyLine.cc \
	Rectangle.hpp Rectangle.cc \
	Ellipse.hpp Ellipse.cc
