## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.5 2001-05-25 22:31:01 jle Exp $

srcdir = @srcdir@
VPATH = @srcdir@

INCLUDES = -I..

noinst_LIBRARIES = libelements.a

libelements_a_SOURCES = PolyLine.hpp PolyLine.cc \
	Rectangle.hpp Rectangle.cc \
	Ellipse.hpp Ellipse.cc \
	Label.hpp Label.cc
