## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.3 2001-05-20 08:17:18 jle Exp $

srcdir = @srcdir@
VPATH = @srcdir@

noinst_LIBRARIES = libespws-fc.a

libespws_fc_a_SOURCES = FileIcon.h FileIcon.cxx \
	FileBrowser.h FileBrowser.cxx \
	FileInput.h FileInput.cxx \
	FileChooser.h FileChooser.cxx FileChooser2.cxx
