## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.8 2001-05-23 07:55:00 jle Exp $

srcdir = @srcdir@
VPATH = @srcdir@

INCLUDES = -I..

noinst_LIBRARIES = libtools.a

libtools_a_SOURCES = DrawingTool.hpp DrawingTool.cc \
	MoveFigTool.hpp MoveFigTool.cc \
	PolyLineTool.hpp PolyLineTool.cc \
	MoveTool.hpp MoveTool.cc \
	DeleteTool.hpp DeleteTool.cc \
	EditTool.hpp EditTool.cc \
	RectangleTool.hpp RectangleTool.cc \
	EllipseTool.hpp EllipseTool.cc
