## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.10 2001-06-10 19:13:10 jle Exp $

srcdir = @srcdir@
VPATH = @srcdir@

INCLUDES = -I..

noinst_LIBRARIES = libtools.a

libtools_a_SOURCES = MoveFigTool.hpp MoveFigTool.cc \
	PolyLineTool.hpp PolyLineTool.cc \
	MoveTool.hpp MoveTool.cc \
	DeleteTool.hpp DeleteTool.cc \
	EditTool.hpp EditTool.cc \
	RectangleTool.hpp RectangleTool.cc \
	EllipseTool.hpp EllipseTool.cc \
	LabelTool.hpp LabelTool.cc
